// IPSec model

syntax = "proto3";

package netproto;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";



// Common MatchSelector. ToDo Add ICMP Match criteria
message MatchSelector {
    // Automatically interpret the string as an octet, a CIDR or an hyphen separated range
    repeated string Addresses           = 1 [(gogoproto.jsontag) = "addresses,omitempty"];

    // Match on the security group
    repeated string SecurityGroups      = 2 [(gogoproto.jsontag) = "security-groups,omitempty"];

    // Match on the App info
    repeated AppConfig AppConfigs       = 4 [(gogoproto.jsontag) = "app-configs,omitempty"];

}

message AppConfig {
    // Protocol for the app. If the protocol is icmp, then the port field gets interpreted as ICMP Type.
    // ICMP Code will be fetched from its corresponding App Object
    string Protocol     = 1 [(gogoproto.jsontag) = "protocol,omitempty"];

    // Port for the app
    string Port         = 2 [(gogoproto.jsontag) = "port,omitempty"];

    // Additional ALG configurations
    string AppName      = 3 [(gogoproto.jsontag) = "app-name,omitempty"];
}
